# Software-Tests-LLM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGES-phase2.md  README.md  docker-compose.yml  plan.md  pytest.ini
app/: .env.example  README.md  docker-compose.yml  ui_map.json
app/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  smoke_test.py
app/backend/app/: database.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
app/backend/app/routers/: auth.py  requests.py
app/backend/src/: database.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
app/backend/src/routers/: auth.py  requests.py
app/backend/tests/: conftest.py  test_auth.py  test_requests.py
app/frontend/: .gitignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
data/golden/: README.md  US-01.json  US-02.json  US-03.json  US-04.json  US-05.json  generated_case_reviews.json
data/user_stories/: US-01.yaml  US-02.yaml  US-03.yaml  US-04.yaml  US-05.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.ollama  Dockerfile.pipeline  pull-models.sh
docs/: AGENTS.md  PLAN.md  REFERENCES.md  Tema 2- de Souza et al., 2025.txt  Todos e Tema 2- Silva et al., 2026.txt  Todos- Gheventer et al., 2026.txt  article.txt  review_findings.md
evaluation/: __init__.py  metrics.py  test_metrics.py
pipeline/: __init__.py  log.py  requirements.txt  settings.py
pipeline/agents/: agent0_quality_gate.py  agent1_generate.py  agent2_judge.py  agent3_codegen.py  summarizer.py  utils.py
(+59 files in other folders)
