[tool.poetry]
name = "backend"
version = "0.1.0"
description = "POC backend"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.0"
pydantic-settings = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

