[tool.poetry]
name = "backend"
version = "0.1.0"
description = "QA Assistant PoC backend — FastAPI app covering US-01..US-05"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = {extras = ["email"], version = "^2.11.0"}
pydantic-settings = "^2.10.0"
sqlalchemy = "^2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.28"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
